k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: aicode
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
